Alteração na direção do texto e nova imagem para o readme

--- a/position_absolute.html
+++ b/position_absolute.html
@@ -25,7 +25,7 @@
                 <div class="checkbox-container">
                     <input type="checkbox" name="remember" id="remember">
                     <label for="remember">Remember me</label>
-                </div><a href="google.com">Reset Password</a>
+                </div><a class="align-right" href="google.com">Reset Password</a>
             </div>
             <input type="submit" value="Sign In">
             <p>or Sign in with</p>
